force-app/main/default/objects/Order_Night_POE__c/fields/Allocation__c.field-meta.xml
<CustomField>
    <fullName>Allocation__c</fullName>
    <label>Allocation</label>
    <referenceTo>Allocation__c</referenceTo>
    <relationshipLabel>Order Nights</relationshipLabel>
    <relationshipName>Order_Nights_POE</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>