force-app/main/default/objects/Order_Night_POE__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <formula>Allocation__r.deal__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal</label>
    <type>Text</type>
</CustomField>