force-app/main/default/objects/Order_Night_POE__c/fields/departures_dates__c.field-meta.xml
<CustomField>
    <fullName>departures_dates__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Departures dates</label>
    <referenceTo>departures_dates__c</referenceTo>
    <relationshipLabel>Order Nights</relationshipLabel>
    <relationshipName>Order_Nights_POE</relationshipName>
    <type>Lookup</type>
</CustomField>