force-app/main/default/objects/Order_Night_POE__c/fields/HSS_Amount__c.field-meta.xml
<CustomField>
    <fullName>HSS_Amount__c</fullName>
    <formula>IF( TAD_Order__r.RecordType.Name == &apos;TNZ&apos; || TAD_Order__r.RecordType.Name==&apos;WT&apos;, 
IF(Order_Line_Item__r.isSplit__c = true, Order_Line_Item__r.Initial_HSS_NZ_Amount__c , departures_dates__r.HSS_amount_nz__c) , 
IF(TAD_Order__r.RecordType.Name == &apos;TAD&apos; || TAD_Order__r.RecordType.Name==&apos;TC&apos; , 
IF(Order_Line_Item__r.isSplit__c = true, Order_Line_Item__r.Initial_HSS_Amount__c , departures_dates__r.HSS_amount__c) , 0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HSS Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>