force-app/main/default/objects/Order_Night_POE__c/fields/HSS_Cost__c.field-meta.xml
<CustomField>
    <fullName>HSS_Cost__c</fullName>
    <formula>IF(departures_dates__r.HSS_Cost__c&gt;0, (departures_dates__r.HSS_Cost__c * order_quantity__c) , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HSS Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>