force-app/main/default/objects/Order_Night_POE__c/fields/HSS_Cost_Currency__c.field-meta.xml
<CustomField>
    <fullName>HSS_Cost_Currency__c</fullName>
    <formula>TEXT(departures_dates__r.HSS_Cost_Currency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HSS Cost Currency</label>
    <type>Text</type>
</CustomField>