force-app/main/default/objects/Order_Night_POE__c/fields/Is_Migrated__c.field-meta.xml
<CustomField>
    <fullName>Is_Migrated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Migrated?</label>
    <type>Checkbox</type>
</CustomField>