force-app/main/default/objects/Order_Night_POE__c/fields/Is_Solo__c.field-meta.xml
<CustomField>
    <fullName>Is_Solo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Solo</label>
    <type>Checkbox</type>
</CustomField>