force-app/main/default/objects/Order_Night_POE__c/fields/Is_Wrong_allocation__c.field-meta.xml
<CustomField>
    <fullName>Is_Wrong_allocation__c</fullName>
    <formula>departures_dates__r.Allocation_Table__c  &lt;&gt;  Allocation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Wrong allocation</label>
    <type>Checkbox</type>
</CustomField>