force-app/main/default/objects/Order_Night_POE__c/fields/Pax_QTY__c.field-meta.xml
<CustomField>
    <fullName>Pax_QTY__c</fullName>
    <formula>VALUE(TEXT(Order_Line_Item__r.PAX_Quantity__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pax QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>