force-app/main/default/objects/Order_Night_POE__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
                <default>true</default>
                <label>Hold</label>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>Secured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>