force-app/main/default/objects/Order_Night_POE__c/fields/withhold_count__c.field-meta.xml
<CustomField>
    <fullName>withhold_count__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Withhold Count</label>
    <type>Checkbox</type>
</CustomField>