force-app/main/default/objects/Order_Night_POE__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>departures_dates__c</columns>
    <columns>evening_date__c</columns>
    <columns>is_first_night__c</columns>
    <columns>order_quantity__c</columns>
    <columns>status__c</columns>
    <columns>withhold_count__c</columns>
    <columns>HSS__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>